<resources>
    <string name="app_name">HealthCareMedicApp</string>
    <string name="app_Login">Login</string>
    <string name="app_Password">Password</string>
    <string name="app_username">Username</string>
    <string name="Button_login">Login</string>
    <string name="New_Register">New User Register !!</string>
    <string name="app_confirm_password">Confirm Password</string>
    <string name="app_Registration">Registration</string>
    <string name="Register_Username">Username</string>
    <string name="button_Register">Register</string>
    <string name="new_user_email">Email</string>
    <string name="Reg_Password">Password</string>
    <string name="user_already_account">Already have an account !!</string>
    <string name="LAB_TEST">LAB TEST</string>
    <string name="Medicine">MEDICINE</string>
    <string name="find_doctor">DOCTOR</string>
    <string name="health_articles">ARTICLES</string>
    <string name="Order_Medicine">Order</string>
    <string name="Top_Doctors">Top Doctors</string>
    <string name="Family_Physicians">Family Physicians</string>
    <string name="Family_Dieticians">Family Dieticians</string>
    <string name="Family_Dentists">Family Dentists</string>
    <string name="Family_Surgeon">Family Surgeon</string>
    <string name="Family_Cardiologists">Family Cardiologists</string>
    <string name="Family_Back">Back</string>
    <string name="app_logout">LOGOUT</string>
    <string name="select_time">SELECT TIME</string>
    <string name="select_date">SELECT DATE</string>
    <string name="Delivery_date">Delivery Date</string>
    <string name="Fees">Fees</string>
    <string name="app_time">-</string>
    <string name="app_dash">-</string>
    <string name="user_address">Address</string>
    <string name="user_contact">Contact Number</string>
    <string name="user_name">User Full Name</string>
    <string name="user_register">Register</string>
    <string name="Date">Select Date</string>
    <string name="Delivery_Location">Delivery Location : Mumbai</string>
    <string name="please_fill_details">Please fill all details for Booking</string>
    <string name="lab_test">Lab Test and Packages</string>
    <string name="Health_Articles">Health Articles</string>
    <string name="Cart">Go To Cart</string>
    <string name="order_details">Order Details</string>
    <string name="Buy_Medicine">Buy Medicine</string>
    <string name="Book">Book</string>
    <string name="pin_code">Pin Code</string>
    <string name="checkout">Checkout</string>
    <string name="AddtoCart">Add To Cart</string>
    <string name="Book_Appointment">Book Appointment</string>
    <string name="LabTest_CartItems">Lab Test Cart Items</string>
</resources>