<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context=".BookAppointmentActivity">

    <Button
        android:id="@+id/buttonAppTime"
        style="?android:spinnerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/select_time"
        android:fontFamily="@font/opensansr"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAppFess"/>

    <Button
        android:id="@+id/buttonAppBack"
        android:layout_width="323dp"
        android:layout_height="41dp"
        android:layout_marginTop="224dp"
        android:background="@drawable/btn_bg"
        android:text="@string/Family_Back"
        android:fontFamily="@font/opensansr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAppFess"/>

    <EditText
        android:id="@+id/editTextAppFess"
        android:layout_width="330dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_bill"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/Fees"
        android:fontFamily="@font/opensansr"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAppContactNumber"/>

    <EditText
        android:id="@+id/editTextAppAddress"
        android:layout_width="330dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_home"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/user_address"
        android:fontFamily="@font/opensansr"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAppFullName"/>

    <EditText
        android:id="@+id/editTextAppContactNumber"
        android:layout_width="330dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/user_contact"
        android:fontFamily="@font/opensansr"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextAppAddress"/>

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/opensansr"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058"/>
    
    <TextView
        android:id="@+id/textViewbookAppointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Book_Appointment"
        android:fontFamily="@font/opensansm"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appname"
        app:layout_constraintVertical_bias="0.021"/>

    <EditText
        android:id="@+id/editTextAppFullName"
        android:layout_width="330dp"
        android:layout_height="43dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:fontFamily="@font/opensansr"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewbookAppointment"/>
    
    <Button
        android:id="@+id/buttonBookAppointment"
        android:layout_width="323dp"
        android:layout_height="41dp"
        android:layout_marginTop="168dp"
        android:background="@drawable/btn_bg"
        android:text="@string/Book_Appointment"
        android:fontFamily="@font/opensansr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextAppFess"/>
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Date"
        android:fontFamily="@font/opensansr"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextAppFess"/>
    
    <Button
        android:id="@+id/buttonAppDate"
        style="?android:spinnerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_dash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3"/>












</androidx.constraintlayout.widget.ConstraintLayout>