<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context=".CartBuyMedicineActivity">

    <TextView
        android:id="@+id/textViewBMCartTotalCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/app_dash"
        android:fontFamily="@font/opensansm"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewBMCart"/>

    <Button
        android:id="@+id/buttonBMCartCheckout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/checkout"
        android:fontFamily="@font/opensansr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textViewDDName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/opensansr"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"/>

    <TextView
        android:id="@+id/textViewDDTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Delivery_Location"
        android:fontFamily="@font/opensansm"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintVertical_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDDName"/>

    <TextView
        android:id="@+id/textViewBMCartTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab_test"
        android:fontFamily="@font/opensansm"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDDName"
        app:layout_constraintVertical_bias="0.071"/>

    <ListView
        android:id="@+id/listViewBMCart"
        android:layout_width="358dp"
        android:layout_height="338dp"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDDTitle"
        app:layout_constraintVertical_bias="0.166"/>

    <Button
        android:id="@+id/buttonBMCartBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Family_Back"
        android:fontFamily="@font/opensansr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Delivery_date"
        android:fontFamily="@font/opensansr"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewBMCartTotalCost"/>

    <Button
        android:id="@+id/BMbuttonCartDate"
        style="?android:spinnerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_dash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3"/>

</androidx.constraintlayout.widget.ConstraintLayout>