<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context=".BuyMedcineDetailsActivity">


    <TextView
        android:id="@+id/labtest_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/opensansr"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/labdeliverylocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Delivery_Location"
        android:fontFamily="@font/opensansm"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labtest_appname"
        app:layout_constraintVertical_bias="0.01999998"/>

    <TextView
        android:id="@+id/textViewBMDPackageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Buy_Medicine"
        android:fontFamily="@font/opensansm"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labdeliverylocation"
        app:layout_constraintVertical_bias="0.01999998"/>

    <EditText
        android:id="@+id/editTextTextBMDMultiLine"
        android:layout_width="290dp"
        android:layout_height="372dp"
        android:layout_marginTop="20dp"
        android:editable="false"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:text="@string/app_dash"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBMDPackageName"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textViewBMDTotalCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_dash"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonBMDAddToCart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTextBMDMultiLine"
        app:layout_constraintVertical_bias="0.517"/>

    <Button
        android:id="@+id/buttonBMDAddToCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/AddtoCart"
        android:fontFamily="@font/opensansr"
        app:layout_constraintBottom_toTopOf="@id/BMDbtnback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/BMDbtnback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/Family_Back"
        android:fontFamily="@font/opensansr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>