<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context=".HealthArticlesDetailActivity">

    <TextView
        android:id="@+id/healtharttitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/health_articles"
        android:fontFamily="@font/opensansm"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/health_artappname"
        app:layout_constraintVertical_bias="0.01999998"/>

    <TextView
        android:id="@+id/health_artappname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/opensansr"
        android:textSize="30sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045"/>

    <Button
        android:id="@+id/healthartbtnback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Family_Back"
        android:fontFamily="@font/opensansr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.69"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="358dp"
        android:layout_height="526dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/healtharttitle"
        tools:srcCompat="@drawable/health1"/>


</androidx.constraintlayout.widget.ConstraintLayout>